--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ project(':tracker-core') {
 project(':server-ui') {
     dependencies {
         compile project(':common')
+        compile("org.springframework.boot:spring-boot-starter-security")
     }
 }
 
