--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ subprojects {
         compile("org.springframework.boot:spring-boot-devtools")
         testCompile group: 'junit', name: 'junit', version: '4.12'
         testCompile("org.springframework.boot:spring-boot-starter-test")
+        testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.22'
     }
 }
 
